<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<EditText
		android:id="@+id/input_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="24dp"
		android:hint="@string/name_input"
		android:inputType="text"
		android:lines="1"
		android:padding="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/input_age"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="24dp"
		android:hint="@string/age_input"
		android:inputType="number"
		android:lines="1"
		android:padding="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/input_name" />

	<CheckBox
		android:id="@+id/check_box"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="24dp"
		android:text="@string/adult_check_box"
		app:layout_constraintBottom_toTopOf="@id/linear_layout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/input_age" />

	<LinearLayout
		android:id="@+id/linear_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="24dp"
		android:gravity="center"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/check_box">

		<Button
			android:id="@+id/load_button"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			android:text="@string/load"
			android:textAlignment="center" />

		<Button
			android:id="@+id/save_button"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text="@string/save"
			android:textAlignment="center" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>